# xConsole

./: .gitignore  .npmrc  AUTORESEARCH.md  HOOKS.md  LICENSE  README.md  RELEASING.md  SECURITY.md  cooldown.toml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  installer-release.yml  release.yml
bench/: README.md  ollama_latency.ps1
bench/history/: index.md  log.md
bench/history/runs/: 2026-06-27T00-52-32.133470100-00-00-llm.md  2026-06-27T00-53-47.450689500-00-00-agent.md  2026-06-27T00-55-00.556526200-00-00-agent.md  2026-06-27T00-59-48.523315-00-00-ablation.md  2026-06-27T01-02-38.235947400-00-00-learn.md  2026-06-27T01-26-04.406853-00-00-hard.md  2026-06-27T12-01-49.604207400-00-00-recall.md  2026-06-27T13-09-35.916153600-00-00-learnloop-warm.md  2026-06-27T14-09-49.628854400-00-00-learnloop-warm.md  2026-06-27T14-28-07.174123100-00-00-learnloop-warm.md
bench/results/: ablation.json  agent-after.json  agent-baseline.json  agent-final.json  agent-final2.json  agent-final3.json  agent-voicemode.json  history.html  history.jsonl  hooks.json  learn.json  learnclassify.json  learnloop.json  learntune.json  llm.json  scanner.json
installer/: .gitignore  ANTIVIRUS.md  Cargo.toml  app.manifest  build-single-exe.ps1  build.rs  tauri.conf.json
installer/capabilities/: default.json
installer/src/: install.rs  main.rs
installer/stub/: Cargo.toml  app.manifest  app.rc  build.rs
installer/stub/src/: main.rs
src/: App.tsx  main.tsx  styles.css
src-tauri/: AGENTS.md  Cargo.toml  app.manifest  build.rs  deny.toml  tauri.conf.json
src-tauri/bundled-skills/infra/terraform-aws/: SKILL.md
src-tauri/bundled-skills/infra/terraform-gcp/: SKILL.md
src-tauri/bundled-skills/infra/terraform-tfc/: SKILL.md
src-tauri/bundled-skills/infra/terraform-vps/: SKILL.md
src-tauri/bundled-skills/meta/ponytail/: SKILL.md
src-tauri/capabilities/: default.json
src-tauri/installer/: installer.nsi
src-tauri/src/: bench.rs  crypto.rs  lib.rs  lock.rs  main.rs  proc.rs  secrets.rs
src-tauri/src/ai/: agent.rs  autoresearch.rs  canvas_context.rs  context.rs  context_compact.rs  context_usage.rs  conversations.rs  cron.rs  edge_tts.rs  edits.rs  hooks.rs  infra_tools.rs  interaction.rs  llama.rs  memory.rs  mod.rs  models.rs  parakeet.rs  piper.rs  provider.rs  reflection.rs  registry.rs  safety.rs  skill_install.rs  skill_scan.rs  skills.rs  soul.rs  text.rs  tools.rs  voice.rs  vps_snapshot.rs  web_tools.rs  workspace_context.rs
src-tauri/src/ai/providers/: anthropic.rs  cli.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/commands/: ai.rs  cloud.rs  infra.rs  lock.rs  mod.rs  remote_file.rs  session.rs  settings.rs  sftp.rs  update.rs  vps.rs  workspace.rs
src-tauri/src/infra/: aws.rs  cloud.rs  gcp.rs  mod.rs  projects.rs  summary.rs  target.rs  terraform.rs  terraform_local.rs  tfc.rs
src-tauri/src/local/: mod.rs
src-tauri/src/mcp/: mod.rs  server.rs  workspace.rs
src-tauri/src/ssh/: client.rs  command.rs  keygen.rs  manager.rs  mod.rs  remote_ops.rs  sftp.rs
src-tauri/src/storage/: database.rs  encrypt.rs  mod.rs  models.rs
src/components/: AppToolbar.tsx  BottomBar.tsx  CanvasFlow.tsx  Dialog.tsx  EmojiPicker.tsx  FloatingEdge.tsx  ServerPanel.tsx  SftpCodeEditor.tsx  SftpContextMenu.tsx  SftpNode.tsx  SftpPermissionsDialog.tsx  TerminalNode.tsx  Toolbar.tsx  Tooltip.tsx  UpdateNotice.tsx  VpsForm.tsx  WorkspacePanel.tsx  icons.tsx
src/components/agent/: AgentActivity.tsx  AgentContextUsage.tsx  AgentHistory.tsx  AgentMarkdown.tsx  AgentPanel.tsx  AgentTokenStats.tsx  ChangesPanel.tsx  ContextHourglass.tsx  SyntaxHighlight.tsx
src/components/lock/: UnlockScreen.tsx
src/components/settings/: SettingsModal.tsx  ui.tsx
src/components/settings/sections/: AgentSection.tsx  CloudSection.tsx  CronSection.tsx  GeneralSection.tsx  HooksSection.tsx  MemorySection.tsx  ModelsSection.tsx  ProjectsSection.tsx  ProvidersSection.tsx  SecuritySection.tsx  SkillsSection.tsx  SoulSection.tsx  ThemeSection.tsx  VoiceSection.tsx
src/hooks/: useInputHistory.ts  useOpenWorkspace.ts  useXtermScaleFix.ts
src/lib/: diff.ts  emojis.ts  filePermissions.ts  notify.ts  streamStats.ts  tauri.ts  terminalCwd.ts  themes.ts  voice.ts  workspaceStyle.ts  xtermScaleFix.ts
src/stores/: agentStatusStore.ts  agentStore.ts  canvasStore.ts  cloudStore.ts  cronStore.ts  dialogStore.ts  editsStore.ts  lockStore.ts  projectStore.ts  sessionStore.ts  settingsStore.ts  themeStore.ts  uiStore.ts  updateStore.ts  voiceStore.ts  vpsStore.ts  workspaceStore.ts
