[package]
name = "xconsole"
version = "0.1.0"
description = "xConsole - Multi-VPS Canvas Terminal"
authors = ["xConsole"]
edition = "2021"

[lib]
name = "xconsole_lib"
# Desktop-only build: a plain rlib linked by the bin. The cdylib/staticlib crate
# types (needed only for mobile) trip the MinGW BFD linker's export-ordinal limit.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime for SSH I/O
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "process"] }

# SSH stack. Use the `ring` crypto backend instead of the default aws-lc-rs:
# ring builds cleanly with MinGW gcc (no NASM/CMake), which suits the toolchain here.
russh = { version = "0.54", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2.3.0"
base64 = "0.22"

# Concurrent session registry
dashmap = "6"

# Local persistence (bundled SQLite, no system dependency)
rusqlite = { version = "0.32", features = ["bundled"] }

# Secrets in the OS keychain (Windows Credential Manager / macOS Keychain / libsecret)
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }

# Wipe key material from memory after use
zeroize = "1"

# HTTP client for AI provider APIs. rustls (ring backend) to match the SSH stack
# and avoid a system OpenSSL/native-tls dependency on the MinGW toolchain.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
async-trait = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["clock"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "5"
anyhow = "1"

# Infra Phase 3: TFC tarball upload, AWS SigV4, GCP JWT
tar = "0.4"
flate2 = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = { version = "9", features = ["use_pem"] }
